# MyVirtualMachine

./: CMakeLists.txt  README.md  main.cpp
sources/: CommandStruct.cpp  CommandStruct.h
sources/ASM/: AsmInterpreter.cpp  AsmInterpreter.h
sources/Logger/: Logger.cpp  Logger.h
sources/Machine/: Machine.cpp  Machine.h
sources/Machine/Memory/: Memory.cpp  Memory.h
sources/Machine/Processor/: Processor.cpp  Processor.h
